--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ include_directories(3way-mpi
 add_executable(OS_Project4
 #        longestCommonSubstringSingle.c
 #        readInFile.c
-        singleThread.c
+#        singleThread.c
+        3way-openmp/openmp.c
         )
 
