--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,5 +12,5 @@ add_executable(OS_Project4
 #        readInFile.c
 #        singleThread.c
         3way-openmp/openmp.c
-        )
+        3way-mpi/mpitest.c)
 
